--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.5.2",
-        "vue": "^3.2.31"
+        "vite": "^5.1.3",
+        "vue": "^3.4.19"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
         "@headlessui/vue": "^1.7.17",
         "@heroicons/vue": "^2.1.1",
         "laravel-echo": "^1.15.3",
-        "pusher-js": "^8.4.0-rc2"
+        "pusher-js": "^8.4.0-rc2",
+        "vuetify": "^3.5.4"
     }
 }
